argocd/k3k-clusters/dev/manifests/neuvector-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuvector-httproute
  namespace: cattle-neuvector-system
  annotations:
    cf-tunnel-operator/backend-scheme: "https"
    cf-tunnel-operator/no-tls-verify: "true"
spec:
  hostnames:
  - "k3k-dev-neuvector.rajesh-kumar.in"
  rules:
  - backendRefs:
    - name: neuvector-service-webui
      port: 8443
